--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h2 class="project-tagline"></h2>
       <a href="https://github.com/jlee66/ProjectWebsite" class="btn">View on GitHub</a>
       <a href="https://github.com/jlee66/ProjectWebsite/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/jlee66/ProjectWebsite/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="http://127.0.0.1:5000/" class="btn">Let's Predict!</a>
     </section>
 
     <section class="main-content">
